# video-summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  install_video_summarizer.sh  pyproject.toml  requirements.txt  run_video_summarizer.sh
src/.streamlit/: config.toml
src/video_summarizer/: main.py  utils.py
src/video_summarizer/data/: correct_transcriptions.csv
src/video_summarizer/transcriptor/: transcription.py
src/video_summarizer/ui/: main.py  tab_1.py  tab_2.py  tab_3.py
