[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-summarizer"
version = "0.1.0"
description = "Package pour lire des transcriptions de vidéos"
authors = ["said.amzine@hymaia.com"]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]